# metretes

./: .env  Cargo.toml  Dockerfile  kafka-compose.yml
migrations/: 0001_setup.sql  0002_accounts.sql
requests/: login.json
src/: config.rs  main.rs
src/http/: auth.rs  error.rs  mod.rs  models.rs  outgoing.rs
src/services/: kafka.rs  meters.rs  mod.rs
